# ff-community-notes

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  script.py
.github/workflows/: deploy.yml  fetch.yml  fetch_candidates.yml  fetch_notes.yml  fetch_ratings.yml  fetch_tweets.yml
_data/: meta.json
ff_notes/: fetch_notes.py  fetch_statuses.py  fetch_tweets.py  helpers.py
output/: _config.yml  index.html  index.md
output/_data/: .gitignore  mps.json
output/_includes/: commify.html
output/_layouts/: default.html
output/about/: index.md
static/: _config.yml  index.html  index.md
static/_layouts/: default.html
static/about/: index.md
tests/: test_notes.py
x_notes/: __main__.py  fetch_candidates.py  fetch_statuses.py  fetch_tweets.py  github.py  helpers.py  meta.py  notes.py  ratings.py  statuses.py  tsv.py  tweets.py
